responsive almost done

--- a/src/Home/HomeStyle.module.css
+++ b/src/Home/HomeStyle.module.css
@@ -28,7 +28,7 @@
 .villageImageThree {
   position: relative; /* ทำให้รูปพื้นหลังคงที่ */
   width: 100%; /* กำหนดความกว้างให้เท่ากับหน้าจอ */
-  height: 100%; /* กำหนดความสูงให้เท่ากับหน้าจอ */
+  height: 120%; /* กำหนดความสูงให้เท่ากับหน้าจอ */
   background-image: url('./Images/village03.png'); /* กำหนดภาพพื้นหลัง */
   background-size: cover; /* ทำให้ภาพพื้นหลังปรับขนาดเพื่อเต็มจอ */
   background-repeat: no-repeat; /* ไม่ให้ภาพพื้นหลังทำซ้ำ */
@@ -38,16 +38,7 @@
   
 }
 
-.Rollnow {
-  position: absolute; /* ทำให้รูปพื้นหลังคงที่ */
-  width: 500px; /* กำหนดความกว้างให้เท่ากับหน้าจอ */
-  height: 150px; /* กำหนดความสูงให้เท่ากับหน้าจอ */
-  background-image: url('./Images/RollNowBorder.png'); /* กำหนดภาพพื้นหลัง */
-  display: flex; flex-direction: column; flex-shrink: 0;
-  background-repeat: no-repeat;
-  z-index: 0; /* ตั้งค่า z-index เป็นค่า 0 เพื่อให้รูปอยู่ข้างหลังข้อความ */
 
-}
 
 .featured01{
   position: absolute;
@@ -65,13 +56,24 @@
     position: absolute;
 }
 .mainfont {
-    position: absolute;
+    
   font-family: "Libre Baskerville", serif;
-  -webkit-text-stroke: 5px black;
+  -webkit-text-stroke: 3px black;
   color: white;
-  font-size: 10rem; /* ปรับขนาดฟ้อนต์ลงเป็น 80% ของขนาดปกติ */
-  transform: scale(0.4); /* ปรับขนาดโดยการลดขนาดเป็น 80% ของขนาดปกติ */
+  font-size: 5rem; /* ปรับขนาดฟ้อนต์ลงเป็น 80% ของขนาดปกติ */
+  transform: scale(0.9); /* ปรับขนาดโดยการลดขนาดเป็น 80% ของขนาดปกติ */
 }
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.flexColumn {
+  display: flex;
+  flex-direction: column;
+ 
+}
+
 
 
 .scroll{
