--- a/src/LoginScreen/loginStyle.module.css
+++ b/src/LoginScreen/loginStyle.module.css
@@ -30,12 +30,73 @@
 }
 
 input, textarea, select {
-  border: 0.4rem solid black;
+  border: 0.3rem solid black;
   padding: 0.7em;
   font-size: 15px;
   line-height: 1.2em;
   width: 20rem;
   background: transparent;
   -webkit-appearance: none;
-  -webkit-border-radius: 0.5em;
+  -webkit-border-radius: 35em;
+}
+
+.box h1 {
+  height: 10%;
+  font-size: 2.5em;
+  text-align: center;
+  margin: 15px 0;
+}
+
+.box {
+  position: relative;
+  width: 85%;
+  height: 60%;
+  margin: auto;
+  top: 5%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10em;
+  background-color: white;
+}
+
+.box .inputBox {
+  width: 100%;
+  height: 10%;
+  text-align: center;
+  transform: translateY(100%);
+}
+
+.box .submit {
+  text-align: center;
+  transform: translateY(180%);
+}
+
+.submit button {
+  font-size: 15px;
+  width: 15em;
+  height: 2.5em;
+  background-color: black;
+  color: white;
+  border-radius: 10em;
+}
+
+.line {
+  position: relative;
+  width: 22em;
+  border: 2px solid black;
+  border-radius: 50px;
+  margin: auto;
+  top: 5em;
+}
+
+.supButton {
+  position: relative;
+  text-align: center;
+  top: 6em;
+}
+
+button {
+  font-size: 1em;
+  background: transparent;
+  border: transparent;
 }
