--- a/src/LoginScreen/loginStyle.module.css
+++ b/src/LoginScreen/loginStyle.module.css
@@ -32,9 +32,10 @@
 input, textarea, select {
   border: 0.3rem solid black;
   padding: 0.7em;
-  font-size: 15px;
+  font-size: 1rem;
   line-height: 1.2em;
-  width: 30rem;
+  width: 50%;
+  height: 40%;
   background: transparent;
   -webkit-appearance: none;
   -webkit-border-radius: 35em;
@@ -63,18 +64,19 @@ input, textarea, select {
   width: 100%;
   height: 10%;
   text-align: center;
-  transform: translateY(100%);
+  transform: translateY(10%);
 }
 
 .box .submit {
+  
   text-align: center;
   transform: translateY(180%);
 }
 
 .submit button {
   font-size: 15px;
-  width: 15em;
-  height: 2.5em;
+  width: 17em;
+  height: 3em;
   background-color: black;
   color: white;
   border-radius: 10em;
@@ -84,15 +86,14 @@ input, textarea, select {
   position: relative;
   width: 22em;
   border: 2px solid black;
-  border-radius: 50px;
-  margin: auto;
-  top: 6em;
+  border-radius: 5px;
+
+  top: 5em;
 }
 
 .supButton {
   position: relative;
   text-align: center;
-  top: 6em;
 }
 
 button {
