--- a/src/Home/HomeStyle.module.css
+++ b/src/Home/HomeStyle.module.css
@@ -56,7 +56,7 @@
 
 .font{
   font-family: "Libre Baskerville", serif;
-    position: absolute;
+  position: absolute;
 }
 .mainfont {
     
@@ -110,18 +110,23 @@ transform: scale(0.6); /* ปรับขนาดโดยการลดขน
 
 /* เมนูบนขวาของหน้าเว็บ */
 .headerMenu {
-  position: absolute;
   width: 37%;
   height: 9%;
   display: flex;
   flex-direction: row;
+ 
+  margin-left: 63%;
   
-  right: 0%;
-  justify-content: left;
-  align-items: center;
+
   border-radius: 2em;
   background-color: rgba(43, 40, 40, 0.5);
   
+}
+
+@media (max-width: 1650px) {
+  .headerMenu {
+    flex-direction: column;
+  }
 }
 
 .headerMenu a {
