--- a/src/RegisScreen/regisStyle.module.css
+++ b/src/RegisScreen/regisStyle.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Metal+Mania&display=swap');
 
-.font{
+.box .font{
   font-family: "Libre Baskerville", serif;
 }
 
@@ -42,10 +42,10 @@ input, textarea, select {
 }
 
 .box h1 {
-  height: 10%;
   font-size: 2.5em;
-  text-align: center;
-  margin: 15px 0;
+  text-align: left;
+  margin-top: -2em;
+  margin-right: 6em;
 }
 
 .box {
@@ -56,7 +56,7 @@ input, textarea, select {
   top: 15%;
   justify-content: center;
   align-items: center;
-  border-radius: 10em;
+  border-radius: 5em;
   background-color: white;
 }
 
@@ -84,10 +84,10 @@ input, textarea, select {
 
 .line {
   position: relative;
-  width: 22em;
+  width: 25em;
   border: 2px solid black;
   border-radius: 5px;
-  top: 4.3em;
+  bottom: 0.5em;
 }
 
 .supButton {
