--- a/src/LoginScreen/loginStyle.module.css
+++ b/src/LoginScreen/loginStyle.module.css
@@ -68,7 +68,6 @@ input, textarea, select {
 }
 
 .box .submit {
-  
   text-align: center;
   transform: translateY(180%);
 }
@@ -99,4 +98,14 @@ button {
   font-size: 1em;
   background: transparent;
   border: transparent;
+}
+
+.submit a {
+  color: white;
+  text-decoration: none;
+}
+
+.supButton a {
+  color: black;
+  text-decoration: none;
 }
