button can press

--- a/src/RegisScreen/regisStyle.module.css
+++ b/src/RegisScreen/regisStyle.module.css
@@ -100,3 +100,9 @@ button {
   background: transparent;
   border: transparent;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 2em;
+}
