--- a/src/Home/HomeStyle.module.css
+++ b/src/Home/HomeStyle.module.css
@@ -77,6 +77,7 @@
   flex-wrap: wrap;
 }
 
+
 .flexitemleft {
   margin-top: 0%;
 
@@ -105,6 +106,11 @@
   display: flex;
   flex-direction: column;
  
+}
+@media (min-width: 1500px) and (max-width: 1750px){
+  .flexColumn{
+    margin-left: -3%;
+  }
 }
 
 
