--- a/src/Home/HomeStyle.module.css
+++ b/src/Home/HomeStyle.module.css
@@ -139,8 +139,8 @@ transform: scale(0.6); /* ปรับขนาดโดยการลดขน
 
 /* เมนูบนขวาของหน้าเว็บ */
 .headerMenu {
-  margin-left: 60%;
-  width: 40%;
+  margin-left: 65em;
+  width: auto;
   height: 9%;
   display: flex;
   flex-direction: row;
@@ -169,5 +169,9 @@ transform: scale(0.6); /* ปรับขนาดโดยการลดขน
 /* ลบขีดเส้นใต้หน้าเว็บเมื่อโฮเวอร์ */
 .headerMenu a:hover {
   margin-top: 10%;
-  text-decoration: none;
+  text-decoration: underline;
+}
+
+.headerMenu b:hover {
+  text-decoration: underline;
 }
