--- a/src/profileScreen/profileStyle.module.css
+++ b/src/profileScreen/profileStyle.module.css
@@ -22,10 +22,21 @@
   z-index: 0; /* ตั้งค่า z-index เป็นค่า 0 เพื่อให้รูปอยู่ข้างหลังข้อความ */
 }
 
+.topline {
+  position: static;
+  width: 100%;
+  height: 4em;
+  
+  background-color: saddlebrown;
+
+
+}
+
 .scroll{
   height: 100%; /* กำหนดความสูงเท่ากับความสูงของหน้าจอ */
   overflow-y: scroll; /* เปิดการใช้งานการเลื่อนแนวตั้งเมื่อเนื้อหามากเกิน */
   box-sizing: border-box;
+  overflow-x: hidden;
   z-index: 0 /* ตั้งค่า z-index เป็นค่าติดลบเพื่อให้สีพื้นหลังอยู่ข้างหลังสุด */;
 }
 
