--- a/src/profileScreen/profileStyle.module.css
+++ b/src/profileScreen/profileStyle.module.css
@@ -11,16 +11,14 @@
   transform: scale(3.5);
 }
 
-.myImages {
-  position: fixed; /* ทำให้รูปพื้นหลังคงที่ */
-  width: 100%; /* กำหนดความกว้างให้เท่ากับหน้าจอ */
-  height: 100%; /* กำหนดความสูงให้เท่ากับหน้าจอ */
-  background-color: antiquewhite; /* กำหนดภาพพื้นหลัง */
-  background-size: cover; /* ทำให้ภาพพื้นหลังปรับขนาดเพื่อเต็มจอ */
-  background-repeat: repeat; /* ไม่ให้ภาพพื้นหลังทำซ้ำ */
-  background-position: center; /* จัดตำแหน่งภาพพื้นหลังกลางหน้าจอ */
-  z-index: 0; /* ตั้งค่า z-index เป็นค่า 0 เพื่อให้รูปอยู่ข้างหลังข้อความ */
+.scroll{
+  height: 100%; /* กำหนดความสูงเท่ากับความสูงของหน้าจอ */
+  overflow-y: scroll; /* เปิดการใช้งานการเลื่อนแนวตั้งเมื่อเนื้อหามากเกิน */
+  box-sizing: border-box;
+  overflow-x: hidden;
+  z-index: 0 /* ตั้งค่า z-index เป็นค่าติดลบเพื่อให้สีพื้นหลังอยู่ข้างหลังสุด */;
 }
+
 
 .topline {
   position: static;
@@ -32,30 +30,77 @@
 
 }
 
-.scroll{
-  height: 100%; /* กำหนดความสูงเท่ากับความสูงของหน้าจอ */
-  overflow-y: scroll; /* เปิดการใช้งานการเลื่อนแนวตั้งเมื่อเนื้อหามากเกิน */
-  box-sizing: border-box;
-  overflow-x: hidden;
-  z-index: 0 /* ตั้งค่า z-index เป็นค่าติดลบเพื่อให้สีพื้นหลังอยู่ข้างหลังสุด */;
+.box2 h1 {
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 2rem;
+  
 }
 
+.box {
+  position: absolute;
+  display: flex;
+  width: 70%;
+  height: 80%;
+  margin: auto;
+  top: 15%;
+  left: 10%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5em;
+  background-color: #AA7441;
+}
+
+.box .inputBox {
+  width: 100%;
+  height: 10%;
+  text-align: center;
+  transform: translateY(10%);
+}
+
+.box .submit{
+  text-align: center;
+  transform: translateY(180%);
+}
+
+.box2 {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 55%;
+  height: 80%;
+  margin: auto;
+  top: 10%;
+  left: 40%;
+  justify-content: top;
+  align-items: center;
+  border-radius: 10em;
+  background-color: wheat;
+}
+
+
+
+
 .profile {
-  position: relative;
+  
   display: grid;
   background-color: inherit;
   height: 20em;
-  width: 100%;
+  
 }
 
 .circle {
+  background-size: 100%;
+
+  background-repeat: no-repeat;
   position: absolute;
-  top: 10%;
+  top: 25%;
   left: 10%;
-  background-color: darkgray;
+
   height: 15em;
   width: 15em;
-  border-radius: 100%;
   background-image: url('./images/images.jpg');
 }
 
@@ -77,9 +122,9 @@
 .line {
   position: static;
   width: 90%;
-  height: 0.5em;
+  height: 0.3em;
   border-radius: 1em;
-  background-color: saddlebrown;
+  background-color: black;
 
   margin-left: 5%;
 }
@@ -108,6 +153,39 @@ button {
 }
 
 .button a {
+  color: white;
+  text-decoration: none;
+}
+
+input, textarea, select {
+  border: 0.3rem solid black;
+  padding: 0.7em;
+  font-size: 1rem;
+  line-height: 1.2em;
+  width: 160%;
+  height: 40%;
+  background: transparent;
+  -webkit-appearance: none;
+  -webkit-border-radius: 35em;
+}
+
+.submit button {
+  font-size: 15px;
+  width: 17em;
+  height: 3em;
+  background-color: black;
+  color: white;
+  border-radius: 10em;
+}
+
+.supButton {
+  position: relative;
+  text-align: center;
+}
+
+  
+
+.supButton a {
   color: white;
   text-decoration: none;
 }
