--- a/src/CreateChaScreen/CreateChaStyle.module.css
+++ b/src/CreateChaScreen/CreateChaStyle.module.css
@@ -149,7 +149,7 @@ button {
   height: 3em;
   background-color: black;
   color: white;
-  border-radius: 10em;
+  border-radius: 30em;
 }
 
 .button a {
@@ -188,4 +188,17 @@ input, textarea, select {
 .supButton a {
   color: white;
   text-decoration: none;
+}
+
+.dropbtn {
+  background-color: transparent;
+  color: white;
+  padding: 1px;
+ 
+  font-size: 16px;
+  text-align: left;
+  cursor: pointer;
+}
+select {
+  width: 410%;
 }
