--- a/src/CreateChaScreen/CreateChaStyle.module.css
+++ b/src/CreateChaScreen/CreateChaStyle.module.css
@@ -54,7 +54,7 @@
 }
 
 .box .inputBox {
-  width: 100%;
+  width: 100vw;
   height: 10%;
   text-align: center;
   transform: translateY(10%);
@@ -162,7 +162,7 @@ input, textarea, select {
   padding: 0.7em;
   font-size: 1rem;
   line-height: 1.2em;
-  width: 160%;
+  width: 20vw;
   height: 40%;
   background: transparent;
   -webkit-appearance: none;
@@ -200,5 +200,5 @@ input, textarea, select {
   cursor: pointer;
 }
 select {
-  width: 410%;
+  width: 21.5vw;
 }
